<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <requestFocus />

    

    <TextView
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="169dp"
        android:text="@string/ad" />

    <TextView
        android:id="@+id/soyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/soyad" />

    <TextView
        android:id="@+id/faturaNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
        android:text="@string/faturaNo" />

    <TextView
        android:id="@+id/textAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAd" />

    <TextView
        android:id="@+id/tutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutar" />

    <TextView
        android:id="@+id/textSoyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSoyad" />

    <TextView
        android:id="@+id/textFaturaNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFaturaNo" />

    <Button
        android:id="@+id/btnSend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:onClick="btnHelloOnClick"
        android:text="@string/btnSend" />

    <TextView
        android:id="@+id/textTutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTutar" />

  

</LinearLayout>